# wsjtx

./: .gitignore  .mailmap  BACKLOG.md  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  CMakeLists_Alerts.txt  CMakeLists_Alerts_PLUS.txt  CMakeLists_Alerts_PLUS_2.7.0-rc3.txt  CMakeLists_Alerts_PLUS_GA.txt  CMakeLists_Alerts_PLUS_rc4.txt  CMakeLists_Alerts_PLUS_rc5.txt  CMakeLists_Alerts_rc3.txt  CMakeLists_ohneAlerts+CloudLog.txt  CMakeLists_ohneAlerts.txt  CMakeLists_ohneAlerts_2.7.1-devel.txt  CMakeLists_ohneAlerts_GA.txt  CMakeLists_ohneAlerts_rc1.txt  CMakeLists_ohneAlerts_rc3.txt  CMakeLists_ohneAlerts_rc4.txt  CMakeLists_ohneAlerts_rc5.txt  CMakeLists_original.txt  CMakeLists_wsjtx.txt  CODEOWNERS  CONTRIBUTING.md  COPYING  Configuration.cpp  Configuration.hpp  Configuration.ui  Configuration_Alerts+CloudLog.cpp  Configuration_Alerts+CloudLog.ui  Configuration_Alerts.cpp  Configuration_Alerts.hpp  Configuration_Alerts.ui  Configuration_Alerts_PLUS.cpp  Configuration_Alerts_PLUS.hpp  Configuration_Alerts_PLUS.ui  Configuration_ohneAlerts+CloudLog.cpp  Configuration_ohneAlerts+CloudLog.ui  Configuration_ohneAlerts.cpp  (+16 more)
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
Modulator/: Modulator.cpp
Network/: Cloudlog.cpp  FileDownload.cpp  FoxVerifier.cpp  MessageClient.cpp  MessageClient.hpp
Transceiver/: HamlibTransceiver.cpp  HamlibTransceiver.hpp  Transceiver.cpp  Transceiver.hpp  TransceiverBase.cpp  TransceiverBase.hpp
doc/: CMakeLists.txt
docs/: SYMBIOTIC_OPEN_SOURCE.md
lib/: astrosub.f90  (+12 more)
tests/fortran/: CMakeLists.txt  test_chkcall.pf  test_grid2deg.pf
(+229 files in other folders)
